--- a/document-types/asylum_support_decision.html
+++ b/document-types/asylum_support_decision.html
@@ -368,9 +368,9 @@
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/vc-v-secretary-of-state-for-the-home-department-as-02-04-2505">VC v Secretary of State for the Home Department: AS/02/04/2505</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/xzc-v-secretary-of-state-for-the-home-department-as-11-08-27297">XZC v Secretary of State for the Home Department: AS/11/08/27297</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/pa-and-ma-v-secretary-of-state-for-the-home-department-as-20-09-42386-and-as-20-09-42397">PA and MA v Secretary of State for the Home Department: AS/20/09/42386 and AS/20/09/42397</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/ts-v-secretary-of-state-for-the-home-department-as-02-04-2462">TS v Secretary of State for the Home Department: AS/02/04/2462</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/kk-v-secretary-of-state-for-the-home-department-as-15-07-33514">KK v Secretary of State for the Home Department: AS/15/07/33514</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/ns-v-secretary-of-state-for-the-home-department-as-11-12-27841">NS v Secretary of State for the Home Department: AS/11/12/27841</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/rj-v-secretary-of-state-for-the-home-department-as-15-04-32984">RJ v Secretary of State for the Home Department: AS/15/04/32984</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/my-v-secretary-of-state-for-the-home-department-as-12-10-29033">MY v Secretary of State for the Home Department: AS/12/10/29033</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=asylum_support_decision&amp;count=10">Source query from Search API</a></p>
 
