--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,15 +362,15 @@
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.uk/government/world-location-news/271980.es-419">Resumen de la Visita Real del Príncipe de Gales y la Duquesa de Cornwall a México</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/172849.pt">UKTI busca brasileiros para participar de festival</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/260563.pt">Missão Britânica já apoiou 500 empresas do Reino Unido em negócios no Brasil</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/209290.ru">Укрепление свободы вероисповедания в Республике Казахстан</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/britain-to-extend-assistance-to-combat-ebola-in-west-africa">Britain to extend assistance to combat Ebola in West Africa</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--7">Advice for British nationals in Chennai</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/269080.es-419">Discurso pronunciado por Su Alteza Real El Príncipe De Gales durante el evento de Paz y Reconciliación en su visita a Colombia</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/175727.es-419">Entrevista con el medallista olímpico venezolano Rubén Limardo</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/175818.es-419">Estrategia internacional del Reino Unido en materia educativa</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/264620.ja">英国ショッピングウィーク　2階建てロンドンバスがTHE NEW MINI 3 DOORと都内を走行</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/173029.lt">Lietuvos kariai tarnaus JK vadovaujamoje ES kovinėje grupėje</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/231480.zh-tw">呼應聯合國最新氣候報告 英國貿易文化辦事處與台達共同呼籲強化節能政策對抗暖化</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/baroness-warsi-meets-bangladesh-political-leaders-in-dhaka">Baroness Warsi meets Bangladesh political leaders in Dhaka</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/230354.pt">Força-Tarefa para Economias Emergentes</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--5">Advice for British nationals in Chennai</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
