--- a/apps/cache-clearing-service.html
+++ b/apps/cache-clearing-service.html
@@ -392,7 +392,7 @@
 </div>          <div class="govuk-summary-list__row">
 
             <dt class="govuk-summary-list__key">Continuously deployed?</dt>
-            <dd class="govuk-summary-list__value">No</dd>
+            <dd class="govuk-summary-list__value">Yes</dd>
 
 
 
