--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/259217.pt">Britânicos visitam RS em busca de empreendedores e investidores</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/286266.es">Día de San David 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/297168.cs">Jaké reformě EU chce Británie napomoci?</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/289218.es-419">Llegará a México la mayor delegación Británica del sector turismo en la historia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/celebrating-three-great-english-exports-in-2015--6">Celebrating three GREAT English exports in 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/190265.ja">RADIEX 2013 に英国が出展</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192676.pt">São Paulo e Rio recebem a maior feira de educação britânica já organizada no país</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/230354.pt">Força-Tarefa para Economias Emergentes</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-food-needs-of-vulnerable-afghans">UK supports food needs of vulnerable Afghans</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/253325.pt">Reino Unido busca ampliar parcerias para Rio 2016</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296968.zh-tw">英國簽證網路說明會</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/226260.ja">駐日英国大使館の歴史を振り返る写真展を開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/215466.es">&ldquo;España es una de las naciones europeas líderes en el ámbito científico&hellip;por lo que es muy importante para nosotros&rdquo;</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/office-closure--3">Office Closure</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/264569.es-419">Ministro para Latinoamérica participa en el Chile Day 2014</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/209290.ru">Укрепление свободы вероисповедания в Республике Казахстан</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/260563.pt">Missão Britânica já apoiou 500 empresas do Reino Unido em negócios no Brasil</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-high-commissioner-in-delhi-to-meet-the-chief-minister-of-gujarat">British High Commissioner in Delhi to meet the Chief Minister of Gujarat</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/290702.ja">英国による健康保険付加料の導入</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/paris-saint-germain-v-chelsea-travel-advice--2">Paris Saint-Germain v Chelsea travel advice</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
